src/test/ui/coherence/impl-foreign-for-foreign[foreign].stderr
error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/impl-foreign-for-foreign[foreign].rs:12:1
   |
LL | impl Remote1<Rc<i32>> for i32 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ impl doesn't use types inside crate
   |
   = note: the impl does not reference only types defined in this crate
   = note: define and implement a trait or new type instead

error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/impl-foreign-for-foreign[foreign].rs:16:1
   |
LL | impl Remote1<Rc<Local>> for f64 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ impl doesn't use types inside crate
   |
   = note: the impl does not reference only types defined in this crate
   = note: define and implement a trait or new type instead

error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/impl-foreign-for-foreign[foreign].rs:20:1
   |
LL | impl<T> Remote1<Rc<T>> for f32 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ impl doesn't use types inside crate
   |
   = note: the impl does not reference only types defined in this crate
   = note: define and implement a trait or new type instead

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0117`.
